Fixed letter spacing on menu headers.

--- a/src/css/unity-stellar.css
+++ b/src/css/unity-stellar.css
@@ -35,7 +35,7 @@
   border-radius: 0;
   color: var(--st-gray-10);
   font-weight: 400;
-  letter-spacing: 0.48px;
+  letter-spacing: 0.60px;
   line-height: 1em;
   padding: 10px 16px;
   margin-bottom: 1px;
